@@ -7,7 +7,7 @@ import java.util.function.Supplier;
 
 public class Multithreading {
 
-    private static final ExecutorService es = Executors.newCachedThreadPool();
+    private static final ExecutorService es = Executors.newVirtualThreadPerTaskExecutor();
     private static final ExecutorService esLimited = Executors
             .newFixedThreadPool(Runtime.getRuntime().availableProcessors() * 8);
     private static final ExecutorService esLimitedPubSub = Executors
